--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         }
     </style>
 
-    <title>Professional Landing Page with Google Maps and Calendly</title>
+    <title>Google Maps and Calendly</title>
 </head>
 
 <body>
     <section class="hero-section">
-        <h1>Welcome to Our Professional Website</h1>
-        <p>Featuring Google Maps and Calendly</p>
+        <h1>Featuring Google Maps and Calendly</h1>
+        
     </section>
 
     <section class="content-section">
@@ -81,7 +81,6 @@
 
         <div id="map" style="height: 400px; width: 80%; margin: 0 auto;"></div>
         <script>
-            // Your Google Maps code here...
         </script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDzIsDPuWnRjtl3f2gim_YS6rDcaTDtUw8&callback=initMap">
         </script>
@@ -98,6 +97,19 @@
 
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-beta1/js/bootstrap.bundle.min.js"></script>
+    <script>
+      function initMap() {
+          var location = {lat: -25.363, lng: 131.044};
+          var map = new google.maps.Map(document.getElementById('map'), {
+              zoom: 4,
+              center: location
+          });
+          var marker = new google.maps.Marker({
+              position: location,
+              map: map
+          });
+      }
+  </script>
 </body>
 
 </html>
